# triton-runner

./: .gitignore  LICENSE  NOTICE.md  README-ZH.md  README.md  README.zh.md  pyproject.toml  setup.py
benchmark/: README.md  benchmark.md
benchmark/launch_latency/: bench.py  repro_cubin_matmul.py  repro_python_attn_tma.py  repro_python_matmul.py  runner_vs_native_per_launch.py
benchmark/static_shape/: matmul.py
cubin_runner/: cubin_runner.py  matmul.py  utils.py
cubin_runner/with_block/: matmul-with-block.py
cubin_runner/with_dot/: matmul-with-dot.py  matmul_kernel.cubin  matmul_kernel.json
cubin_runner/with_tma/: matmul-with-tma-v2.py
doc/: benchmark.md  debug.md  debugging.md  dump.md  examples.md  examples_v3.0.0.md  examples_v3.1.0.md  examples_v3.2.0.md  examples_v3.3.x.md  examples_v3.4.0.md  exmaples_v3.2.0.md  exmaples_v3.4.0.md  runner.md  test.py
doc/solving_triton_issues/: README.md
examples/: examples.md  examples_v3.4.0.md  regression_test.py  test.py
examples/autotune/: README.md
examples/debugging/: README.md
examples/dump/: README.md
examples/gloun_runner/: 02-layouts.py
examples/native/: matmul.py
examples/native_kernel/: 02-matrix_transpose.py  03-matrix_multiplication.py  04-softmax.py  06-attention.py  07-fused_kda_gate.py
examples/native_triton/: 01-vec_add.py  06-attention.py
examples/python_runner/: matmul-with-dot-v2.py  matmul-with-tma-v4.py  matmul.py
examples/runner/: README.md
examples/triton_kernel/: matmul-with-dot-v2.py  matmul-with-tma-v3.py  matmul-with-tma-v4.py  matmul.py
examples/ttir_runner/: matmul.py  matmul_kernel.ttir
examples/utils/: generate_cmd.py
examples/utils.py/: generate_cmd.py
examples/v3.1.0/: examples_v3.1.0.md
examples/v3.2.0/: examples_v3.2.0.md
examples/v3.3.x/: examples_v3.3.x.md
examples/v3.4.0/: examples_v3.4.0.md
test/: regression_test.py  test.py  test_example_commands.py
triton_issue/: README.md  flash_attn_triton.py
triton_runner/: __init__.py  autotune.py  check_utils.py  color_print.py  compile.py  compiler.py  debug_utils.py  driver.py  dump_utils.py  jit.py  jit_dump.py  jit_metadata.py  jit_prod.py  jit_versions.py  pass_stages.py  testing.py  tlx_utils.py  torch_utils.py  triton_compat.py  tvm_ffi.py  version_utils.py
(+835 files in other folders)
