[project]
name = "triton-runner"
description = "Multi-Level Triton Runner supporting Python, IR, PTX, and cubin."

dependencies = [
    "triton>=3.0.0",
    "termcolor",
]

readme = "README.md"
version = "0.3.3"
authors = [
    { name = "Bob Huang", email = "x@bobhuang.xyz" },
]
license = "MIT"

[project.urls]
repository = "https://github.com/toyaix/triton-runner"
homepage = "https://triton-runner.org"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
include-package-data = true

[tool.setuptools.package-data]
"triton_runner" = ["README.md"]

[tool.setuptools.packages.find]
include = ["triton_runner*"]
