[project]
name = "triton-runner"
description = "Multi-Level Triton Runner supporting Python, IR, PTX, and cubin."

dependencies = [
    "triton>=3.0.0",
    "termcolor",
]

readme = "README.md"
version = "0.3.7"
authors = [
    { name = "Bob Huang", email = "x@bobhuang.xyz" },
]
license = "MIT"

[project.urls]
repository = "https://github.com/toyaix/triton-runner"
homepage = "https://triton-runner.org"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
include-package-data = true

[project.optional-dependencies]
tvm-ffi = [
    "apache-tvm-ffi",
]

[tool.setuptools.package-data]
"triton_runner" = ["README.md"]
"triton_runner.tvm_ffi" = ["generic_launcher.cc"]

[tool.setuptools.packages.find]
include = ["triton_runner*"]
